add about, contact, privacy policy and update layout, unsubscribe page

--- a/AspMVCECommerce/Views/Home/About.cshtml
+++ b/AspMVCECommerce/Views/Home/About.cshtml
@@ -1,7 +1,62 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<!-- BREADCRUMB -->
+<div id="breadcrumb" class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="breadcrumb-header">About Us</h3>
+                <ul class="breadcrumb-tree">
+                    <li><a href="~/Home/Index">Home</a></li>
+                    <li class="active">
+                        About Us
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /BREADCRUMB -->
+<!-- SECTION -->
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
 
-<p>Use this area to provide additional information.</p>
+            <div class="col-md-12">
+
+                <p class="MsoNormal" style="text-align:justify;background:white;">
+                    Welcome to Zaldy's Ecommerce, your number one source for all things electronic. We're dedicated to giving you the very best of electronics product, with a focus on Laptop's, Smart Phones, Tablet's, Accessories And Headphones.
+
+                </p>
+                <p class="MsoNormal" style="text-align:justify;background:white;">
+                    Founded in 2022 by Zaldy Jeg M. Piraman, Zaldy's Ecommerce has come a long way from its beginnings in Malolos City, Bulacan. When Zaldy first started out, his passion for quality and affordable products drove them to quit day job, do tons of research, etc. so that Zaldy's Ecommerce can offer you the world's most advanced electronics. We now serve customers all over Philippines, and are thrilled that we're able to turn our passion into our own website.
+
+                </p>
+                <p class="MsoNormal" style="text-align:justify;background:white;">
+                    we hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments, please don't hesitate to contact us.
+
+                </p>
+                <p class="MsoNormal" style="text-align:justify;background:white;">
+                    Sincerely,
+                    <br />
+                    <br />
+                    Zaldy Jeg M. Piraman
+                </p>
+
+            </div>
+
+
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+
+</div>
+<!-- /SECTION -->
