--- a/AspMVCECommerce/Views/Home/Contact.cshtml
+++ b/AspMVCECommerce/Views/Home/Contact.cshtml
@@ -1,17 +1,56 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<!-- BREADCRUMB -->
+<div id="breadcrumb" class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="breadcrumb-header">Contact Us</h3>
+                <ul class="breadcrumb-tree">
+                    <li><a href="~/Home/Index">Home</a></li>
+                    <li class="active">
+                        Contact Us
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+</div>
+<!-- /BREADCRUMB -->
+<!-- SECTION -->
+<div class="section">
+    <!-- container -->
+    <div class="container">
+        <!-- row -->
+        <div class="row">
+
+            <div class="col-md-12">
+                <address>
+                    Malolos City<br />
+                    Bulacan, Philippines<br />
+                    <abbr title="Phone">P:</abbr>
+                    +639969472918
+                </address>
+
+                <address>
+                    <strong>Support:</strong>   <a href="mailto:zaldys.ecommerce.demo@gmail.com">zaldys.ecommerce.demo@gmail.com</a><br />
+                    <strong>Marketing:</strong> <a href="mailto:zaldys.ecommerce.demo@gmail.com">zaldys.ecommerce.demo@gmail.com</a>
+                </address>
+
+            </div>
+
+
+        </div>
+        <!-- /row -->
+    </div>
+    <!-- /container -->
+
+</div>
+<!-- /SECTION -->
