--- a/AspMVCECommerce/Views/Shared/_Layout.cshtml
+++ b/AspMVCECommerce/Views/Shared/_Layout.cshtml
@@ -344,7 +344,7 @@
                     <div class="col-md-3 col-xs-6">
                         <div class="footer">
                             <h3 class="footer-title">About Us</h3>
-                            <p>This is a Electronic Ecommerce store demo created in Asp MVC .NET Framework 4.5 with Entity Framework. The Database use in this project is MSSQL Server 2019 Express </p>
+                            <p>Welcome to Zaldy's Ecommerce, your number one source for all things electronic. We're dedicated to giving you the very best of electronics product, with a focus on Laptop's, Smart Phones, Tablet's, Accessories And Headphones.</p>
                             <ul class="footer-links">
                                 <li><a href="#"><i class="fa fa-map-marker"></i>Malolos City Bulacan</a></li>
                                 <li><a href="#"><i class="fa fa-phone"></i>+639969472918</a></li>
@@ -359,11 +359,11 @@
                         <div class="footer">
                             <h3 class="footer-title">Categories</h3>
                             <ul class="footer-links">
-                                <li><a href="#">Hot deals</a></li>
-                                <li><a href="#">Laptops</a></li>
-                                <li><a href="#">Smartphones</a></li>
-                                <li><a href="#">Cameras</a></li>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="~/Home/Store?selectedCategory=1%2C2%2C3%2C4%2C5%2C6&selectedNavCategory=Hot%20Deals">Hot deals</a></li>
+                                <li><a href="~/Home/Store?selectedCategory=1&selectedNavCategory=Laptops">Laptops</a></li>
+                                <li><a href="~/Home/Store?selectedCategory=2&selectedNavCategory=Smartphones">Smartphones</a></li>
+                                <li><a href="~/Home/Store?selectedCategory=5&selectedNavCategory=Cameras">Cameras</a></li>
+                                <li><a href="~/Home/Store?selectedCategory=3&selectedNavCategory=Accessories">Accessories</a></li>
                             </ul>
                         </div>
                     </div>
@@ -374,11 +374,11 @@
                         <div class="footer">
                             <h3 class="footer-title">Information</h3>
                             <ul class="footer-links">
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="~/Home/About">About Us</a></li>
+                                <li><a href="~/Home/Contact">Contact Us</a></li>
+                                <li><a href="~/Home/PrivacyPolicy">Privacy Policy</a></li>
                                 <li><a href="#">Orders and Returns</a></li>
-                                <li><a href="#">Terms & Conditions</a></li>
+                                <li><a href="~/Home/TermsAndCondition">Terms & Conditions</a></li>
                             </ul>
                         </div>
                     </div>
