--- a/AspMVCECommerce/Views/Home/Product.cshtml
+++ b/AspMVCECommerce/Views/Home/Product.cshtml
@@ -1,8 +1,8 @@
 ﻿@model AspMVCECommerce.Models.Product
 @using System.Linq;
 @using System.Collections.Generic;
-@using Microsoft.AspNet.Identity
-
+@using Microsoft.AspNet.Identity;
+@using AspMVCECommerce.Models;;
 
 @{
     ViewBag.Title = "Product";
@@ -85,7 +85,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-o"></i>
                         </div>
-                        <a class="review-link" data-toggle="tab" href="#tab3" >10 Review(s) | Add your review</a>
+                        <a class="review-link" data-toggle="tab" href="#tab3">10 Review(s) | Add your review</a>
                     </div>
                     <div>
                         @if (Model.PromoSaleOFF > 0)
@@ -114,7 +114,7 @@
                         }
 
                     </div>
-                    <p id="pDescription1" style="word-wrap:break-word";></p>
+                    <p id="pDescription1" style="word-wrap:break-word" ;></p>
 
                     @*<p>@Html.DisplayFor(model => model.Description)</p>*@
 
@@ -124,7 +124,7 @@
                     <div class="product-options">
                         <label>
                             Size
-                            @if (ViewBag.Sizes.Items.Count ==  0)
+                            @if (ViewBag.Sizes.Items.Count == 0)
                             {
                                 <select class="input-select input-selectx">
                                     <option value="0">Default</option>
@@ -182,7 +182,51 @@
                     </div>
 
                     <ul class="product-btns">
-                        <li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+
+                        @if (Request.IsAuthenticated)
+                        {
+                            if (User.IsInRole("Customer"))
+                            {
+                                if (ViewBag.WistList != null)
+                                {
+                                    if (((List<WishList>)ViewBag.WistList).Count() > 0)
+                                    {
+                                        var CustomerId = Microsoft.AspNet.Identity.IdentityExtensions.GetUserId(User.Identity);
+
+                                        if (((List<WishList>)ViewBag.WistList).Where(w => w.CustomerId == CustomerId && w.ProductId == Model.ProductId).ToList().Count() > 0)
+                                        {
+                                            <li><a href="#" onclick="RemoveToWishList(event,'@Model.ProductId');"><i class="fa fa-heart" style="color: #D10024;"></i> remove to wishlist</a></li>
+                                        }
+                                        else
+                                        {
+                                            <li><a href="#" onclick="AddToWishList(event,'@Model.ProductId');"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+                                        }
+                                    }
+                                    else
+                                    {
+                                        <li><a href="#" onclick="AddToWishList(event,'@Model.ProductId');"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+                                    }
+                                }
+                                else
+                                {
+                                    <li><a href="#" onclick="AddToWishList(event,'@Model.ProductId');"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+
+                                }
+
+                            }
+                            else
+                            {
+                                <li><a href="#" onclick="location.href='/Account/Login'"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+                            }
+                        }
+                        else
+                        {
+                            <li><a href="#" onclick="location.href='/Account/Login'"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+
+                        }
+
+
+
                         <li><a href="#"><i class="fa fa-exchange"></i> add to compare</a></li>
                     </ul>
 
@@ -422,39 +466,38 @@
 
             <!-- product -->
             @*<div class="col-md-3 col-xs-6">
-                <div class="product">
-                    <div class="product-img">
-                        <img src="~/FrontEnd/img/product01.png" alt="">
-                        <div class="product-label">
-                            <span class="sale">-30%</span>
+                    <div class="product">
+                        <div class="product-img">
+                            <img src="~/FrontEnd/img/product01.png" alt="">
+                            <div class="product-label">
+                                <span class="sale">-30%</span>
+                            </div>
+                        </div>
+                        <div class="product-body">
+                            <p class="product-category">Category</p>
+                            <h3 class="product-name"><a href="#">product name goes here</a></h3>
+                            <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
+                            <div class="product-rating">
+                            </div>
+                            <div class="product-btns">
+                                <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
+                                <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+                            </div>
+                        </div>
+                        <div class="add-to-cart">
+                            <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
                         </div>
                     </div>
-                    <div class="product-body">
-                        <p class="product-category">Category</p>
-                        <h3 class="product-name"><a href="#">product name goes here</a></h3>
-                        <h4 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h4>
-                        <div class="product-rating">
-                        </div>
-                        <div class="product-btns">
-                            <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
-                            <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
-                            <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
-                        </div>
-                    </div>
-                    <div class="add-to-cart">
-                        <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
-                    </div>
-                </div>
-            </div>*@
+                </div>*@
             <!-- /product -->
             <!-- load product zaldy -->
-           
             <!-- store products -->
-           
-          @if (ViewBag.RelatedProduct != null)
-          {
-              foreach (var item in ViewBag.RelatedProduct)
-              {
+
+            @if (ViewBag.RelatedProduct != null)
+            {
+                foreach (var item in ViewBag.RelatedProduct)
+                {
                     <!-- product -->
                     <div class="col-md-3 col-xs-6">
 
@@ -528,12 +571,12 @@
 
 
                                 @*<div class="product-rating">
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                                <i class="fa fa-star"></i>
-                            </div>*@
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>*@
 
 
                                 <div class="product-rating">
@@ -550,10 +593,51 @@
                                         }
                                     }
                                 </div>
-
+                               
 
                                 <div class="product-btns">
-                                    <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+
+                                    @if (Request.IsAuthenticated)
+                                    {
+                                        if (User.IsInRole("Customer"))
+                                        {
+                                            if (ViewBag.WistList != null)
+                                            {
+                                                if (((List<WishList>)ViewBag.WistList).Count() > 0)
+                                                {
+                                                    var CustomerId = Microsoft.AspNet.Identity.IdentityExtensions.GetUserId(User.Identity);
+
+                                                    if (((List<WishList>)ViewBag.WistList).Where(w => w.CustomerId == CustomerId && w.ProductId == item.ProductId).ToList().Count() > 0)
+                                                    {
+                                                        <button id="add-to-wishlist" onclick="RemoveToWishList(event,'@item.ProductId');" class="add-to-wishlist"><i class="fa fa-heart" style="color: #D10024;"></i><span class="tooltipp">remove to wishlist</span></button>
+                                                    }
+                                                    else
+                                                    {
+                                                        <button id="add-to-wishlist" onclick="AddToWishList(event,'@item.ProductId');" class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    <button id="add-to-wishlist" onclick="AddToWishList(event,'@item.ProductId');" class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                                }
+                                            }
+                                            else
+                                            {
+                                                <button id="add-to-wishlist" onclick="AddToWishList(event,'@item.ProductId');" class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                            }
+
+                                        }
+                                        else
+                                        {
+                                            <button class="add-to-wishlist" onclick="location.href='/Account/Login'"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                        }
+                                    }
+                                    else
+                                    {
+
+                                        <button class="add-to-wishlist" onclick="location.href='/Account/Login'"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+                                    }
+
                                     <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button>
                                     @*<button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>*@
 
@@ -589,10 +673,9 @@
                         <!-- /product -->
 
                     </div>
-              }
-          }
+                }
+            }
             <!-- /store products -->
-
             <!-- end of load product zaldy-->
 
 
@@ -619,11 +702,10 @@
     <script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="~/Scripts/dataTables.bootstrap4.min.js"></script>
     <!-- /END OF DATA TABLE CODE -->
-
     @*<script type="text/javascript" src="~/Scripts/toastr.min.js"></script>*@
 
 
-    <script type="text/javascript">
+<script type="text/javascript">
 
             function isEmail(email) {
               var regex = /^([a-zA-Z0-9_.+-])+\@@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
@@ -902,6 +984,45 @@
         }
 
          // END OF ADD PRODUCT TO CART
+
+
+          // ADD PRODUCT TO WISH LIST
+            var wishListBaseUrl = '@Url.Content("~/")';
+            var tempUserId = '';
+
+            @if (Request.IsAuthenticated)
+            {
+                if (User.IsInRole("Customer")) {
+                    <text>
+                        tempUserId = '@(Microsoft.AspNet.Identity.IdentityExtensions.GetUserId(User.Identity))';
+                    </text>
+                }
+            }
+
+            function AddToWishList(e,productId) {
+       
+                        $.post(wishListBaseUrl + 'api/WishList/AddWishList',
+                            {
+                                ProductId: productId,
+                                CustomerId: tempUserId
+                            })
+                            .done(function () {
+                                $("#newsletter-form").trigger('reset');
+                                toastr.success('The <strong>Product</strong> record has been successfully added to wish list.', 'Record Added.');
+                            })
+                            .fail(function (xhr) {
+                                var err = eval("(" + xhr.responseText + ")");
+                                toastr.error('The <strong>Product</strong> add to wish list saving failed due to:  ' + err.Message, 'Record Add Failed.');
+
+                            });
+
+                        e.preventDefault();
+
+
+                e.preventDefault();
+            }
+
+
 
         $(document).ready(function () {
 
@@ -1217,8 +1338,13 @@
                     $(this).text($(this).text().substr(0, 102) + '...');
                 }
             });
+
+
+
+
+
         });
-    </script>
+</script>
 }
 
 
