complete Add to wishlist,remove to Wishlist,Add wishlist page, Add wishlist count to navigation bar and fix add to cart list product name max length on menu bar

--- a/AspMVCECommerce/Content/Site.css
+++ b/AspMVCECommerce/Content/Site.css
@@ -730,3 +730,8 @@ input:focus-visible {
     line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+
+.tooltipp {
+    white-space: nowrap !important;
+    width: 160px !important;
+}
