add link to home product image to navigate to product page

--- a/AspMVCECommerce/Views/Home/Index.cshtml
+++ b/AspMVCECommerce/Views/Home/Index.cshtml
@@ -98,7 +98,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -273,7 +273,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -456,7 +456,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -642,7 +642,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -826,7 +826,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1000,7 +1000,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1263,7 +1263,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1444,7 +1444,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1620,7 +1620,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1795,7 +1795,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -1971,7 +1971,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
@@ -2145,7 +2145,7 @@
                                         <div class="product-img">
                                             @if (item.Images.Count > 0)
                                             {
-                                                <a href="#" class="d-block mb-4">
+                                                <a href="/Home/Product?productId=@(item.ProductId)&selectedNavCategory=@ViewBag.SelectedNavCategory" class="d-block mb-4">
                                                     @{var itemImages = item.Images.ToList(); }
                                                     @foreach (var itemImage in itemImages)
                                                     {
